<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/play"
        android:title="@string/play_selection"/>

    <item
        android:id="@+id/playNext"
        android:title="@string/play_next"/>

    <item
        android:title="@string/menu_add_to">
        <menu>
            <item
                android:id="@+id/addToPlaylist"
                android:title="@string/menu_playlist">
                <menu/>
            </item>

            <item
                android:id="@+id/addToQueue"
                android:title="@string/menu_queue"/>
        </menu>
    </item>

    <item
        android:id="@+id/scan"
        android:title="@string/scan_file"/>

    <item
        android:id="@+id/editTags"
        android:title="@string/edit_tags"/>

    <item
        android:id="@+id/share"
        android:title="@string/share"/>

    <item
        android:id="@+id/ringtone"
        android:title="@string/ringtone_menu"/>

    <item
        android:id="@+id/songInfo"
        android:title="@string/song_info"/>

    <item
        android:id="@+id/whitelist"
        android:title="@string/whitelist_title"/>

    <item
        android:id="@+id/blacklist"
        android:title="@string/blacklist_title"/>

    <item
        android:id="@+id/rename"
        android:title="@string/rename"/>

    <item
        android:id="@+id/delete"
        android:title="@string/delete_item"/>

</menu>