<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_string_title_artwork">

        <androidx.preference.Preference
            android:key="pref_download_artwork"
            android:summary="@string/pref_summary_download_artwork"
            android:title="@string/pref_title_download_artwork"/>

        <androidx.preference.Preference
            android:key="pref_delete_artwork"
            android:summary="@string/pref_summary_delete_artwork"
            android:title="@string/pref_title_delete_artwork"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_download_artwork_auto"
            android:summary="@string/pref_summary_download_artwork_auto"
            android:title="@string/pref_title_download_artwork_auto"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_download_wifi_only"
            android:summary="@string/pref_summary_download_wifi_only"
            android:title="@string/pref_title_download_wifi_only"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_artwork_queue"
            android:title="@string/pref_title_artwork_queue"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_crop_artwork"
            android:summary="@string/pref_summary_crop_album_art"
            android:title="@string/pref_title_crop_album_art"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_placeholders"
            android:summary="@string/pref_summary_placeholders"
            android:title="@string/pref_title_placeholders"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_prefer_embedded"
            android:summary="@string/pref_summary_prefer_embedded_art"
            android:title="@string/pref_title_prefer_embedded_art"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_ignore_embedded_artwork"
            android:summary="@string/pref_summary_ignore_embedded_art"
            android:title="@string/pref_title_ignore_embedded_art"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_ignore_mediastore_artwork"
            android:summary="@string/pref_summary_ignore_mediastore_art"
            android:title="@string/pref_title_ignore_mediastore_art"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_ignore_folder_artwork"
            android:summary="@string/pref_summary_ignore_folder_art"
            android:title="@string/pref_title_ignore_folder_art"/>

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>