<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory
        android:key="support_group"
        android:title="@string/pref_title_support">

        <androidx.preference.Preference
            android:key="pref_version"
            android:title="@string/pref_title_version"/>

        <androidx.preference.Preference
            android:key="pref_changelog"
            android:title="@string/pref_title_changelog"/>

        <androidx.preference.Preference
            android:key="pref_faq"
            android:summary="@string/pref_summary_faq"
            android:title="@string/pref_title_faq"/>

        <androidx.preference.Preference
            android:key="pref_help"
            android:summary="@string/pref_summary_community"
            android:title="@string/pref_title_community"/>

        <androidx.preference.Preference
            android:key="pref_rate"
            android:summary="@string/pref_summary_rate"
            android:title="@string/pref_title_rate"/>

        <androidx.preference.Preference
            android:key="pref_restore_purchases"
            android:summary="@string/pref_summary_restore_purchases"
            android:title="@string/pref_title_restore_purchases"/>

    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>