<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:title="@string/blacklist_title">

        <androidx.preference.Preference
            android:key="pref_blacklist_view"
            android:summary="@string/blacklist_description"
            android:title="@string/pref_title_view_blacklist"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/whitelist_title">

        <androidx.preference.Preference
            android:key="pref_whitelist_view"
            android:summary="@string/whitelist_description"
            android:title="@string/pref_title_view_whitelist"/>
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>